--- a/package.json
+++ b/package.json
@@ -29,5 +29,19 @@
 		"vite": "^4.3.0",
 		"vitest": "^0.25.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"common-tags": "^1.8.2",
+		"mdast-builder": "^1.1.1",
+		"mdast-util-from-markdown": "^1.3.0",
+		"mdast-util-to-markdown": "^1.5.0",
+		"remark": "^14.0.2",
+		"remark-parse": "^10.0.1",
+		"unified": "^10.1.2",
+		"unist-builder": "^3.0.1",
+		"unist-util-filter": "^4.0.1",
+		"unist-util-remove-position": "^4.0.2",
+		"unist-util-visit": "^4.1.2",
+		"vfile": "^5.3.7"
+	}
 }
