--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
 	"type": "module",
 	"dependencies": {
 		"common-tags": "^1.8.2",
+		"hast-util-to-html": "^8.0.4",
 		"mdast-builder": "^1.1.1",
 		"mdast-util-from-markdown": "^1.3.0",
+		"mdast-util-to-hast": "^12.3.0",
 		"mdast-util-to-markdown": "^1.5.0",
 		"remark": "^14.0.2",
 		"remark-parse": "^10.0.1",
