--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
 		"hast-util-to-html": "^8.0.4",
 		"mdast-builder": "^1.1.1",
 		"mdast-util-from-markdown": "^1.3.0",
+		"mdast-util-frontmatter": "^1.0.1",
 		"mdast-util-to-hast": "^12.3.0",
 		"mdast-util-to-markdown": "^1.5.0",
+		"micromark-extension-frontmatter": "^1.1.0",
 		"remark": "^14.0.2",
 		"remark-parse": "^10.0.1",
 		"unified": "^10.1.2",
