--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
+		"@types/hast": "^2.3.4",
+		"@types/mdast": "^3.0.11",
+		"@types/unist": "^2.0.6",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"eslint": "^8.28.0",
@@ -32,6 +35,8 @@
 	"type": "module",
 	"dependencies": {
 		"common-tags": "^1.8.2",
+		"hast-util-heading": "^2.0.1",
+		"hast-util-heading-rank": "^2.1.1",
 		"hast-util-to-html": "^8.0.4",
 		"mdast-builder": "^1.1.1",
 		"mdast-util-from-markdown": "^1.3.0",
@@ -39,12 +44,14 @@
 		"mdast-util-to-hast": "^12.3.0",
 		"mdast-util-to-markdown": "^1.5.0",
 		"micromark-extension-frontmatter": "^1.1.0",
+		"rehype": "^12.0.1",
 		"remark": "^14.0.2",
 		"remark-parse": "^10.0.1",
 		"unified": "^10.1.2",
 		"unist-builder": "^3.0.1",
 		"unist-util-filter": "^4.0.1",
 		"unist-util-remove-position": "^4.0.2",
+		"unist-util-select": "^4.0.3",
 		"unist-util-visit": "^4.1.2",
 		"vfile": "^5.3.7"
 	}
