--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"hast-util-heading": "^2.0.1",
 		"hast-util-heading-rank": "^2.1.1",
 		"hast-util-to-html": "^8.0.4",
+		"hast-util-to-string": "^2.0.0",
 		"mdast-builder": "^1.1.1",
 		"mdast-util-from-markdown": "^1.3.0",
 		"mdast-util-frontmatter": "^1.0.1",
@@ -50,6 +51,7 @@
 		"unified": "^10.1.2",
 		"unist-builder": "^3.0.1",
 		"unist-util-filter": "^4.0.1",
+		"unist-util-is": "^5.2.1",
 		"unist-util-remove-position": "^4.0.2",
 		"unist-util-select": "^4.0.3",
 		"unist-util-visit": "^4.1.2",
