--- a/package.json
+++ b/package.json
@@ -37,15 +37,20 @@
 		"common-tags": "^1.8.2",
 		"hast-util-heading": "^2.0.1",
 		"hast-util-heading-rank": "^2.1.1",
+		"hast-util-reading-time": "^1.0.2",
 		"hast-util-to-html": "^8.0.4",
+		"hast-util-to-mdast": "^9.0.0",
 		"hast-util-to-string": "^2.0.0",
 		"mdast-builder": "^1.1.1",
 		"mdast-util-from-markdown": "^1.3.0",
 		"mdast-util-frontmatter": "^1.0.1",
 		"mdast-util-to-hast": "^12.3.0",
 		"mdast-util-to-markdown": "^1.5.0",
+		"mdast-util-toc": "^6.1.1",
 		"micromark-extension-frontmatter": "^1.1.0",
 		"rehype": "^12.0.1",
+		"rehype-autolink-headings": "^6.1.1",
+		"rehype-slug": "^5.1.0",
 		"remark": "^14.0.2",
 		"remark-parse": "^10.0.1",
 		"unified": "^10.1.2",
