--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"common-tags": "^1.8.2",
 		"hast-util-heading": "^2.0.1",
 		"hast-util-heading-rank": "^2.1.1",
+		"hast-util-is-element": "^2.1.3",
 		"hast-util-reading-time": "^1.0.2",
 		"hast-util-to-html": "^8.0.4",
 		"hast-util-to-mdast": "^9.0.0",
@@ -56,10 +57,12 @@
 		"unified": "^10.1.2",
 		"unist-builder": "^3.0.1",
 		"unist-util-filter": "^4.0.1",
+		"unist-util-find": "^1.0.2",
 		"unist-util-is": "^5.2.1",
 		"unist-util-remove-position": "^4.0.2",
 		"unist-util-select": "^4.0.3",
 		"unist-util-visit": "^4.1.2",
+		"unist-util-visit-parents": "^5.1.3",
 		"vfile": "^5.3.7"
 	}
 }
