--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"hast-util-to-html": "^8.0.4",
 		"hast-util-to-mdast": "^9.0.0",
 		"hast-util-to-string": "^2.0.0",
+		"hastscript": "^7.2.0",
 		"mdast-builder": "^1.1.1",
 		"mdast-util-from-markdown": "^1.3.0",
 		"mdast-util-frontmatter": "^1.0.1",
