--- a/package.json
+++ b/package.json
@@ -35,10 +35,15 @@
 	"type": "module",
 	"dependencies": {
 		"common-tags": "^1.8.2",
+		"hast-util-from-html": "^1.0.1",
+		"hast-util-from-selector": "^2.0.1",
 		"hast-util-heading": "^2.0.1",
 		"hast-util-heading-rank": "^2.1.1",
 		"hast-util-is-element": "^2.1.3",
+		"hast-util-raw": "^8.0.0",
 		"hast-util-reading-time": "^1.0.2",
+		"hast-util-sanitize": "^4.1.0",
+		"hast-util-select": "^5.0.5",
 		"hast-util-to-html": "^8.0.4",
 		"hast-util-to-mdast": "^9.0.0",
 		"hast-util-to-string": "^2.0.0",
