--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "commonmark-viewer",
-	"version": "0.0.1",
+	"name": "commonmark-spec-viewer",
+	"version": "0.1.0",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
@@ -14,6 +14,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-static": "^2.0.2",
 		"@sveltejs/kit": "^1.5.0",
 		"@types/hast": "^2.3.4",
 		"@types/mdast": "^3.0.11",
